Coins, pursuer interaction, moved HUD implementation to gamemode

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -142,29 +142,33 @@ LastLevel=/Game/LearningKit_Games/Maps/LearningKit_Games_Showcase
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Enemies/BP_Pursuer.BP_Pursuer
+OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Widgets-HUD/BP_HUD.BP_HUD
 OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter.BP_LearningKit_PlayerCharacter
+OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Widgets-HUD/GameOver.GameOver
+OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Pickups/Collectable_Pickup_BP.Collectable_Pickup_BP
+OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/GameFramework/BP_LearningKitGameMode.BP_LearningKitGameMode
 
 [ContentBrowserRecent]
-MRUItem0=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BPI_LearningKit_PlayerInteractions
-MRUItem1=/Game/LearningKit_Games/Assets/Characters/Character/Animations/epicCharacter_AnimBP
-MRUItem2=/Game/LearningKit_Games/Blueprints/Enemies/BP_Pursuer
-MRUItem3=/Game/LearningKit_Games/Blueprints/Widgets-HUD/coinImagfinale
-MRUItem4=/Game/LearningKit_Games/Blueprints/Widgets-HUD/BP_HUD
-MRUItem5=/Game/LearningKit_Games/Blueprints/Widgets-HUD/HPBar
-MRUItem6=/Game/LearningKit_Games/Assets/Props/Collectibles/Common/SM_Collectible_Common
-MRUItem7=/Game/LearningKit_Games/Blueprints/Widgets-HUD/CoinCounter
-MRUItem8=/Game/LearningKit_Games/Blueprints/Pickups/PowerUp_Pickup_BP_Child
-MRUItem9=/Game/LearningKit_Games/Blueprints/Pickups/Collectable_Pickup_BP
-MRUItem10=/Game/LearningKit_Games/Blueprints/Enemies/ABP_Pursuer
-MRUItem11=/Game/LearningKit_Games/Assets/Characters/Character/Animations/epicCharacter_HoverFly_2D1
-MRUItem12=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
-MRUItem13=/Game/LearningKit_Games/Blueprints/GameFramework/BP_LearningKitGameMode
-MRUItem14=/Game/LearningKit_Games/Blueprints/Enemies/BS_IdleWalk
-MRUItem15=/Game/LearningKit_Games/Assets/Characters/Character/Animations/epicCharacter_Falling
-MRUItem16=/Game/LearningKit_Games/Assets/Characters/Character/Animations/ThirdPerson_Retarget/ThirdPersonIdle
-MRUItem17=/Game/LearningKit_Games/Assets/Characters/Character/Animations/epicCharacter_Idle
-MRUItem18=/Game/LearningKit_Games/Assets/Characters/Character/Animations/epicCharacter_CrouchWalk_2D
-MRUItem19=/Game/LearningKit_Games/Assets/Characters/Character/Mesh/Enemy
+MRUItem0=/Game/LearningKit_Games/Blueprints/Pickups/Collectable_Pickup_BP
+MRUItem1=/Game/LearningKit_Games/Blueprints/Widgets-HUD/BP_HUD
+MRUItem2=/Game/LearningKit_Games/Blueprints/GameFramework/BP_LearningKitGameMode
+MRUItem3=/Game/LearningKit_Games/Blueprints/Widgets-HUD/HPBar
+MRUItem4=/Game/LearningKit_Games/Blueprints/Widgets-HUD/GameOver
+MRUItem5=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BPI_LearningKit_PlayerInteractions
+MRUItem6=/Game/LearningKit_Games/Assets/Characters/Character/Animations/epicCharacter_AnimBP
+MRUItem7=/Game/LearningKit_Games/Blueprints/Enemies/BP_Pursuer
+MRUItem8=/Game/LearningKit_Games/Blueprints/Widgets-HUD/coinImagfinale
+MRUItem9=/Game/LearningKit_Games/Assets/Props/Collectibles/Common/SM_Collectible_Common
+MRUItem10=/Game/LearningKit_Games/Blueprints/Widgets-HUD/CoinCounter
+MRUItem11=/Game/LearningKit_Games/Blueprints/Pickups/PowerUp_Pickup_BP_Child
+MRUItem12=/Game/LearningKit_Games/Blueprints/Enemies/ABP_Pursuer
+MRUItem13=/Game/LearningKit_Games/Assets/Characters/Character/Animations/epicCharacter_HoverFly_2D1
+MRUItem14=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
+MRUItem15=/Game/LearningKit_Games/Blueprints/Enemies/BS_IdleWalk
+MRUItem16=/Game/LearningKit_Games/Assets/Characters/Character/Animations/epicCharacter_Falling
+MRUItem17=/Game/LearningKit_Games/Assets/Characters/Character/Animations/ThirdPerson_Retarget/ThirdPersonIdle
+MRUItem18=/Game/LearningKit_Games/Assets/Characters/Character/Animations/epicCharacter_Idle
+MRUItem19=/Game/LearningKit_Games/Assets/Characters/Character/Animations/epicCharacter_CrouchWalk_2D
 
 [DetailCategories]
 Pursuer_C.TransformCommon=True
@@ -652,6 +656,8 @@ BP_LearningKit_PlayerCharacter_C.Materials=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
 K2Node_InputAction.Input=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -932,12 +938,16 @@ bMaterialQualityUsed[3]=0
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
-Object=
+Object="\"Object.Appearance.Font\" \"Object.Layout.Slot\" "
 Image="\"Object.Appearance.Brush\" "
-Widget="\"Object.Appearance.Brush\" "
-Visual="\"Object.Appearance.Brush\" "
-TextBlock="\"Object.Appearance.Font\" "
-TextLayoutWidget="\"Object.Appearance.Font\" "
+Widget="\"Object.Appearance.Font\" \"Object.Layout.Slot\" "
+Visual="\"Object.Appearance.Font\" \"Object.Layout.Slot\" "
+TextBlock="\"Object.Appearance.Font\" \"Object.Layout.Slot\" "
+TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Layout.Slot\" "
+CanvasPanel="\"Object.Layout.Slot\" "
+PanelWidget="\"Object.Layout.Slot\" "
+HPBar_C="\"Object.Layout.Slot\" "
+UserWidget="\"Object.Layout.Slot\" "
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
