--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -185,40 +185,50 @@ BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
 AssetViewerSettings=AssetViewerSettings.Settings.Environment,
 PersonaPreviewSceneDescription=AssetViewerSettings.Settings.Environment,
 PreviewMeshCollection=
+CapsuleComponent=
+BP_Pursuer_C=
+K2Node_VariableSet=CapsuleComponent.Physics.ConstraintsGroup,
+PropertyWrapper=CapsuleComponent.Physics.ConstraintsGroup,
+K2Node_VariableGet=CapsuleComponent.Physics.ConstraintsGroup,
+ABP_Pursuer_C=
+BTService_SetRandomLocation_C=
+BTService_SetNearLocation_C=
+AIC_Pursuer_C=
+BP_LearningKitGameMode_C=
 
 [EditorStartup]
 LastLevel=/Game/LearningKit_Games/Maps/LearningKit_Games_Showcase
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/GameFramework/BP_LearningKitGameMode.BP_LearningKitGameMode
-OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Widgets-HUD/GameOver.GameOver
+OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Enemies/Pursuer/BTTask_Attack.BTTask_Attack
+OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Enemies/Pursuer/BTService_SetRandomLocation.BTService_SetRandomLocation
+OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Enemies/Pursuer/BB_Pursuer.BB_Pursuer
+OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Enemies/Pursuer/BP_Pursuer.BP_Pursuer
+OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Enemies/Pursuer/BT_Pursuer.BT_Pursuer
 OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter.BP_LearningKit_PlayerCharacter
-OpenAssetsAtExit=/Game/LearningKit_Games/Maps/LearningKit_Games_Showcase.LearningKit_Games_Showcase:PersistentLevel.LearningKit_Games_Showcase
-OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Widgets-HUD/TimeDisplay.TimeDisplay
-OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Widgets-HUD/BP_HUD.BP_HUD
 
 [ContentBrowserRecent]
-MRUItem0=/Game/LearningKit_Games/Blueprints/Widgets-HUD/BP_HUD
-MRUItem1=/Game/LearningKit_Games/Blueprints/Widgets-HUD/TimeDisplay
-MRUItem2=/Game/LearningKit_Games/Blueprints/Widgets-HUD/Congratulations
-MRUItem3=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BPI_LearningKit_PlayerInteractions
-MRUItem4=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
-MRUItem5=/Game/LearningKit_Games/Blueprints/Widgets-HUD/GameOver
-MRUItem6=/Game/LearningKit_Games/Blueprints/GameFramework/BP_LearningKitGameMode
-MRUItem7=/Game/LearningKit_Games/Blueprints/Pickups/Collectable_Pickup_BP
-MRUItem8=/Game/LearningKit_Games/Blueprints/Widgets-HUD/HPBar
-MRUItem9=/Game/LearningKit_Games/Assets/Characters/Character/Animations/epicCharacter_AnimBP
-MRUItem10=/Game/LearningKit_Games/Blueprints/Enemies/BP_Pursuer
-MRUItem11=/Game/LearningKit_Games/Blueprints/Widgets-HUD/coinImagfinale
-MRUItem12=/Game/LearningKit_Games/Assets/Props/Collectibles/Common/SM_Collectible_Common
-MRUItem13=/Game/LearningKit_Games/Blueprints/Widgets-HUD/CoinCounter
-MRUItem14=/Game/LearningKit_Games/Blueprints/Pickups/PowerUp_Pickup_BP_Child
-MRUItem15=/Game/LearningKit_Games/Blueprints/Enemies/ABP_Pursuer
-MRUItem16=/Game/LearningKit_Games/Assets/Characters/Character/Animations/epicCharacter_HoverFly_2D1
-MRUItem17=/Game/LearningKit_Games/Blueprints/Enemies/BS_IdleWalk
-MRUItem18=/Game/LearningKit_Games/Assets/Characters/Character/Animations/epicCharacter_Falling
-MRUItem19=/Game/LearningKit_Games/Assets/Characters/Character/Animations/ThirdPerson_Retarget/ThirdPersonIdle
+MRUItem0=/Game/LearningKit_Games/Blueprints/Enemies/Pursuer/BTService_SetRandomLocation
+MRUItem1=/Game/LearningKit_Games/Blueprints/Enemies/Pursuer/BTTask_Attack
+MRUItem2=/Game/LearningKit_Games/Blueprints/Enemies/Pursuer/BP_Pursuer
+MRUItem3=/Game/LearningKit_Games/Blueprints/Enemies/Pursuer/BT_Pursuer
+MRUItem4=/Game/LearningKit_Games/Blueprints/Enemies/Pursuer/AIC_Pursuer
+MRUItem5=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
+MRUItem6=/Game/LearningKit_Games/Blueprints/Enemies/Pursuer/BTService_SetNearLocation
+MRUItem7=/Game/LearningKit_Games/Assets/Characters/Character/Animations/epicCharacter_InteractQuick
+MRUItem8=/Game/LearningKit_Games/Assets/Characters/Character/Animations/ABP_Pursuer
+MRUItem9=/Game/LearningKit_Games/Blueprints/Widgets-HUD/GameOver
+MRUItem10=/Game/LearningKit_Games/Blueprints/Widgets-HUD/Congratulations
+MRUItem11=/Game/LearningKit_Games/Blueprints/GameFramework/BP_LearningKitGameMode
+MRUItem12=/Game/LearningKit_Games/Blueprints/Enemies/Pursuer/BTService_BlueprintBase_New
+MRUItem13=/Game/LearningKit_Games/Blueprints/Enemies/Pursuer/BB_Pursuer
+MRUItem14=/Game/LearningKit_Games/Blueprints/Widgets-HUD/BP_HUD
+MRUItem15=/Game/LearningKit_Games/Blueprints/Widgets-HUD/TimeDisplay
+MRUItem16=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BPI_LearningKit_PlayerInteractions
+MRUItem17=/Game/LearningKit_Games/Blueprints/Pickups/Collectable_Pickup_BP
+MRUItem18=/Game/LearningKit_Games/Blueprints/Widgets-HUD/HPBar
+MRUItem19=/Game/LearningKit_Games/Assets/Characters/Character/Animations/epicCharacter_AnimBP
 
 [DetailCategories]
 Pursuer_C.TransformCommon=True
@@ -254,15 +264,15 @@ SkeletalMeshComponent.Sockets=False
 SkeletalMeshComponent.Animation=True
 SkeletalMeshComponent.Mesh=True
 SkeletalMeshComponent.ComponentTick=True
-SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.Clothing=False
 SkeletalMeshComponent.MasterPoseComponent=True
 SkeletalMeshComponent.Physics=True
 SkeletalMeshComponent.ClothingSimulation=True
-SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.Collision=False
 SkeletalMeshComponent.Lighting=True
 SkeletalMeshComponent.Rendering=True
 SkeletalMeshComponent.SkinWeights=True
-SkeletalMeshComponent.Navigation=True
+SkeletalMeshComponent.Navigation=False
 SkeletalMeshComponent.VirtualTexture=True
 SkeletalMeshComponent.Tags=True
 SkeletalMeshComponent.ComponentReplication=True
@@ -541,7 +551,7 @@ CharacterMovementComponent.Variable=True
 CharacterMovementComponent.Sockets=True
 CharacterMovementComponent.Character Movement (General Settings)=True
 CharacterMovementComponent.Character Movement: Walking=True
-CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=False
 CharacterMovementComponent.ComponentTick=True
 CharacterMovementComponent.Character Movement (Networking)=True
 CharacterMovementComponent.Character Movement: Swimming=True
@@ -555,7 +565,7 @@ CharacterMovementComponent.RootMotion=True
 CharacterMovementComponent.Character Movement: NavMesh Movement=True
 CharacterMovementComponent.NavMovement=True
 CharacterMovementComponent.Velocity=True
-CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.PlanarMovement=False
 CharacterMovementComponent.MovementComponent=True
 CharacterMovementComponent.Tags=True
 CharacterMovementComponent.ComponentReplication=True
@@ -779,6 +789,110 @@ Congratulations_C.Accessibility=True
 Congratulations_C.Clipping=True
 Congratulations_C.Navigation=True
 Congratulations_C.Localization=True
+NiagaraActor.TransformCommon=True
+NiagaraActor.Niagara=True
+NiagaraActor.NiagaraComponent_Parameters=True
+NiagaraActor.Activation=True
+NiagaraActor.Lighting=True
+NiagaraActor.Attachment=True
+NiagaraActor.Randomness=True
+NiagaraActor.Parameters=True
+NiagaraActor.Materials=True
+NiagaraActor.Compilation=True
+NiagaraActor.Rendering=True
+NiagaraActor.Navigation=True
+NiagaraActor.Tags=True
+NiagaraActor.Cooking=True
+NiagaraActor.Replication=True
+NiagaraActor.Actor=True
+AIC_Pursuer_C.Tick=True
+AIC_Pursuer_C.AI=True
+AIC_Pursuer_C.Controller=True
+AIC_Pursuer_C.Replication=True
+AIC_Pursuer_C.Actor=True
+AIC_Pursuer_C.Input=True
+BehaviorTreeGraphNode_Root.AI=True
+BTComposite_Sequence.Composite=True
+BTComposite_Sequence.Description=True
+BTTask_MoveTo.Node=True
+BTTask_MoveTo.Blackboard=True
+BTTask_MoveTo.Task=True
+BTTask_MoveTo.Description=True
+BTTask_Wait.Wait=True
+BTTask_Wait.Task=True
+BTTask_Wait.Description=True
+BlackboardData.Parent=True
+BlackboardData.Key=True
+BTService_BlueprintBase_New_C.Description=True
+BTService_BlueprintBase_New_C.Service=True
+BTService_SetRandomLocation_C.Description=True
+BTService_SetRandomLocation_C.Service=True
+NavMeshBoundsVolume.TransformCommon=True
+NavMeshBoundsVolume.Navigation=True
+NavMeshBoundsVolume.Collision=True
+NavMeshBoundsVolume.Tags=True
+NavMeshBoundsVolume.Cooking=True
+NavMeshBoundsVolume.Replication=True
+NavMeshBoundsVolume.BrushSettings=True
+NavMeshBoundsVolume.Actor=True
+TextRenderActor.TransformCommon=True
+TextRenderActor.Materials=True
+TextRenderActor.Text=True
+TextRenderActor.Lighting=True
+TextRenderActor.Navigation=True
+TextRenderActor.Tags=True
+TextRenderActor.Rendering=True
+TextRenderActor.Cooking=True
+TextRenderActor.Replication=True
+TextRenderActor.Input=True
+TextRenderActor.Actor=True
+Actor.TransformCommon=True
+Actor.Collision=True
+BTService_SetRandomLocation_C.Default=True
+AIC_Pursuer_C.ComponentTick=True
+AIC_Pursuer_C.Tags=True
+AIC_Pursuer_C.ComponentReplication=True
+AIC_Pursuer_C.Activation=True
+AIC_Pursuer_C.Variable=True
+AIC_Pursuer_C.Cooking=True
+RecastNavMesh.TransformCommon=True
+RecastNavMesh.Display=True
+RecastNavMesh.Generation=True
+RecastNavMesh.Query=True
+RecastNavMesh.Runtime=True
+RecastNavMesh.Collision=True
+AIPerceptionComponent.Variable=True
+AIPerceptionComponent.Sockets=True
+AIPerceptionComponent.AI Perception=True
+AIPerceptionComponent.Tags=True
+AIPerceptionComponent.ComponentTick=True
+AIPerceptionComponent.ComponentReplication=True
+AIPerceptionComponent.Cooking=True
+AIPerceptionComponent.Events=True
+BTTask_RotateToFaceBBEntry.Node=True
+BTTask_RotateToFaceBBEntry.Blackboard=True
+BTTask_RotateToFaceBBEntry.Task=True
+BTTask_RotateToFaceBBEntry.Description=True
+BTTask_Attack_C.Task=True
+BTTask_Attack_C.Description=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Interfaces=True
+Blueprint.Packaging=True
+Blueprint.Thumbnail=True
+SkeletalMeshComponent.SkeletalMesh=False
+SkeletalMeshComponent.Optimization=True
+AnimationGraph.Inputs=True
+AnimationGraph.GraphBlending=True
+AnimGraphNode_TransitionResult.Result=True
+BTService_SetNearLocation_C.Description=True
+BTService_SetNearLocation_C.Service=True
+BTService_SetNearLocation_C.Default=True
+BTComposite_Selector.Composite=True
+BTComposite_Selector.Description=True
+BTDecorator_Blackboard.FlowControl=True
+BTDecorator_Blackboard.Blackboard=True
+BTDecorator_Blackboard.Description=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -838,6 +952,17 @@ NodeTemplateCacheCapMB=20.000000
 /Game/LearningKit_Games/Blueprints/Pickups/Collectable_Pickup_BP.Collectable_Pickup_BP=1
 /Game/LearningKit_Games/Blueprints/GameFramework/BP_LearningKitGameMode.BP_LearningKitGameMode=1
 /Game/LearningKit_Games/Blueprints/PlayerCharacter/BPI_LearningKit_PlayerInteractions.BPI_LearningKit_PlayerInteractions=1
+/Game/LearningKit_Games/Maps/LearningKit_Games_Showcase.LearningKit_Games_Showcase:PersistentLevel.LearningKit_Games_Showcase=1
+/Game/LearningKit_Games/Blueprints/Widgets-HUD/GameOver.GameOver=1
+/Game/LearningKit_Games/Blueprints/Widgets-HUD/Congratulations.Congratulations=1
+/Game/LearningKit_Games/Blueprints/Widgets-HUD/TimeDisplay.TimeDisplay=1
+/Game/LearningKit_Games/Blueprints/Enemies/Pursuer/BP_Pursuer.BP_Pursuer=1
+/Game/LearningKit_Games/Blueprints/Enemies/Pursuer/BTTask_Attack.BTTask_Attack=1
+/Game/LearningKit_Games/Assets/Characters/Character/Animations/epicCharacter_InteractQuick.EpicCharacter_InteractQuick=1
+/Game/LearningKit_Games/Blueprints/Enemies/Pursuer/BT_Pursuer.BT_Pursuer=1
+/Game/LearningKit_Games/Blueprints/Enemies/Pursuer/BB_Pursuer.BB_Pursuer=1
+/Game/LearningKit_Games/Assets/Characters/Character/Animations/ABP_Pursuer.ABP_Pursuer=1
+/Game/LearningKit_Games/Blueprints/Enemies/Pursuer/BTService_SetRandomLocation.BTService_SetRandomLocation=1
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -1012,13 +1137,14 @@ bConvertSceneUnit=False
 LastLogListing=PIE
 
 [SelectionDetails]
-PreserveScaleRatio=False
+PreserveScaleRatio=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/LearningKit_Games/Blueprints/Enemies/Pursuer/BP_Pursuer.BP_Pursuer;
+RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/LearningKit_Games/Blueprints/Pickups/Collectable_Pickup_BP.Collectable_Pickup_BP;
-RecentlyPlaced=/Game/LearningKit_Games/Blueprints/Enemies/BP_Pursuer.BP_Pursuer;
-RecentlyPlaced=/Game/LearningKit_Games/Blueprints/Enemies/ABP_Pursuer.ABP_Pursuer;
+RecentlyPlaced=/Game/LearningKit_Games/Blueprints/Enemies/Pursuer/ABP_Pursuer.ABP_Pursuer;
 
 [MaterialEditor]
 PrimType=1
@@ -1080,23 +1206,41 @@ bMaterialQualityUsed[3]=0
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
-DataAsset="\"Object.SkeletalMeshes\" "
-Object=
+DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[2].KeyType\" "
+Object="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[2].KeyType\" "
 Image="\"Object.Appearance.Brush\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Layout.Slot\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Layout.Slot\" "
+Widget="\"Object.Appearance.BrushColor\" \"Object.Layout.Slot\" "
+Visual="\"Object.Appearance.BrushColor\" \"Object.Layout.Slot\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Layout.Slot\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Layout.Slot\" "
 CanvasPanel="\"Object.Layout.Slot\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
+PanelWidget="\"Object.Appearance.BrushColor\" \"Object.Layout.Slot\" "
 HPBar_C="\"Object.Layout.Slot\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
 GameOver_C="\"Object.Layout.Slot\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
-ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
+ContentWidget="\"Object.Appearance.BrushColor\" \"Object.Layout.Slot\" "
 Overlay="\"Object.Layout.Slot\" "
 Border="\"Object.Appearance.BrushColor\" \"Object.Layout.Slot\" "
 Congratulations_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
+BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[2].KeyType\" "
+NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
+BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
+AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
+EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
+AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
+ActorComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
+SphereComponent="\"Object.Collision.BodyInstance\" "
+ShapeComponent="\"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object.Collision.BodyInstance\" "
+SkeletalMeshComponent="\"Object.Collision.BodyInstance\" "
+SkinnedMeshComponent="\"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object.Collision.BodyInstance\" "
+CapsuleComponent="\"Object.Collision.BodyInstance\" "
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
